[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scenes/GameUI/LocalAwarenessUI/LocalAwarenessUI.gd" type="Script" id=2]
[ext_resource path="res://Scenes/GameUI/LocalAwarenessUI/LocalAwarenessPanel.tscn" type="PackedScene" id=3]

[node name="LocalAwarenessUI" type="Control"]
anchor_bottom = 1.0
rect_min_size = Vector2( 150, 0 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_bottom = 1.0
custom_constants/separation = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LocalAwarenessPanel" parent="VBoxContainer" instance=ExtResource( 3 )]
anchor_top = 0.0
anchor_bottom = 0.0
margin_top = 0.0
margin_bottom = 116.0

[connection signal="changed_location" from="VBoxContainer/LocalAwarenessPanel" to="." method="_on_LocalAwarenessPanel_changed_location"]
